# mpifold

./: README  dune  example.ml  mpifold.ml  mpifold.mli  mpifold.opam
